implementing dtos